Draft of Dockerfile and docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ bot_token.txt
 path/*
 db-info/config.yml
 db-info/db-wallet
-commands/__pycache__/*
-db_migrations/migrations/__pycache__/*
+__pycache__
+.venv
+.env
+
