Renamed container names for more clarity

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
 ORACLE_USER=system
 ORACLE_PASSWORD=somepassword
-ORACLE_DSN=oracle-db:1521/FREE
+ORACLE_DSN=npc-oracle-db:1521/FREE
 ORACLE_DATABASE=FREE
 DISCORD_TOKEN=some_token
